# Toyc-Kit

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
docs/: InterpreterDesign.md  c11_lexical.l  grammar.txt  lexical.l  sign.md  symbol.md  syntax.y  test.cmm
example/: a.toyc  factorial.toyc  fibonacci.toyc  guess.toyc  simple.toyc
examples/: comment.toyc  factorial.toyc  fibonacci.toyc  for.toyc  global_variable.toyc  guess.toyc  if.toyc  math.toyc  random.toyc  repl_test.toyc  repl_test.toycs  run_speed.toyc  simple.toyc  while.toyc
include/: AST.h  ASTPrint.h  ASTVisitor.h  CodeGen.h  Config.h  Expected.h  Interpreter.h  Lexer.h  LineEditor.h  Parser.h  Token.h  Util.h
include/AST/: AST.h  ASTPrint.h  ASTVisitor.h
include/CodeGen/: CodeGen.h  InterpreterCodeGen.h
include/Compiler/: Compiler.h
include/Interpreter/: Interpreter.h  JIT.h  LineEditor.h
include/Lexer/: Lexer.h  Token.h
include/Parser/: InterpreterParser.h  Parser.h
include/Preprocessor/: Preprocessor.h
include/REPL/: LineEditor.h
include/Repl/: LineEditor.h
include/Sema/: Sema.h
include/compiler/: Compiler.h  CompilerCodeGen.h  CompilerParser.h
include/interpreter/: Interpreter.h  InterpreterCodeGen.h  InterpreterParser.h  JIT.h
lib/: CMakeLists.txt  libtoyc.cpp
lib/include/: math.toyc  std.toyc  time.toyc
scripts/: run_e2e_test.sh  toyc-repl.sh  toyc.sh  toycc.sh  toyci.sh
src/: AST.cpp  ASTPrint.cpp  CMakeLists.txt  CodeGen.cpp  Interpreter.cpp  Lexer.cpp  Parser.cpp  main.cpp
src/AST/: AST.cpp  ASTPrint.cpp  CMakeLists.txt
src/CodeGen/: CMakeLists.txt  CodeGen.cpp  InterpreterCodeGen.cpp
src/Compiler/: Compiler.cpp  toycc.cpp
src/Interpreter/: CMakeLists.txt  Interpreter.cpp  toyci.cpp
src/Lexer/: CMakeLists.txt  Lexer.cpp
src/Parser/: CMakeLists.txt  InterpreterParser.cpp  Parser.cpp
src/Preprocessor/: CMakeLists.txt  Preprocessor.cpp
src/REPL/: ToycREPL.cpp
src/Repl/: LineEditor.cpp  ToycRepl.cpp
src/Sema/: CMakeLists.txt  Sema.cpp
src/compiler/: CodeGen.cpp  Compiler.cpp  Parser.cpp  toycc.cpp
src/interpreter/: CodeGen.cpp  Interpreter.cpp  Parser.cpp  toyci.cpp
test/: CMakeLists.txt  DemoTest.cpp  ExpectedTest.cpp  ParserTest.cpp  PreprocessorTest.cpp  TokenTest.cpp
test/Unit/: PreprocessorTest.cpp
test/Unit/Parser/: assign.toyc  assign_ast.txt  simple.toyc
test/Unit/Preprocessor/: comment.toyc  comment_expect.toyc  include.toyc  include_expect.toyc
test/e2e/: for_loop.ll.expected  for_loop.toyc  if_else_stmt.ll.expected  if_else_stmt.out.expected  if_else_stmt.toyc  if_stmt.ll.expected  if_stmt.toyc  recursive.ll.expected  recursive.toyc  while_stmt.ll.expected  while_stmt.toyc
